--- a/express_test/express_app/views/index.jade
+++ b/express_test/express_app/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
-
+ 
  
 block content
  
@@ -28,8 +28,8 @@ block content
   p Retrive picture
   div(id="returnPicNew")
   div(id="home2")
-    P Name stuff
-    h2= name
+    h2 Name stuff
+    h3= name
       p This is #{name};
       button(onclick='clickme()')  click
       p This is new: #{something}
