--- a/express_test/express_app/views/users.jade
+++ b/express_test/express_app/views/users.jade
@@ -7,14 +7,14 @@ block content
     li 
       a(href="#home1",class="active") home1
     li 
-      a(href='#home2') home2
+      a(href='#home2') #{name9} 
     li(style="float:right")
-      a(href='#home3') #{name} 
+      a(href='#home3') home2
 
   h1= title
   p Welcome to #{title}
   
- 
+  p Rceived #{name}
   div(id="home2")
     p Postpage
   div(id="Inputfields")
