--- a/express_test/express_app/views/index copy.jade
+++ b/express_test/express_app/views/index copy.jade
@@ -21,10 +21,22 @@ block content
   h1= title
   p Welcome to #{title}
   
- 
+  p  
+    #container
+      - if (name)
+        p 
+        |The name is set to:
+        br
+        i - #{name} -
+      - else
+        p  No name set!
+
   div(id="home1")
     div(id="returnMsg")
-    p Returning: 
+      p Returning: 
+    div(id="returnPic")
+
+    p Retrive picture
     div(id="returnPicNew")
 
   
@@ -48,12 +60,15 @@ block content
       | #{name ?  name : ' fault -ain\'t no name there!'}
       h3 #{name}
     
-
+  button(onclick='clickme()')  click
   p 
     | This is new (something): 
     br 
     i #{newthing}
-
+  script.
+    function clickme() {
+      alert('The popup.... ')
+    }
 
   div(id="home3")
     p
